Update presentation & notebooks with saving

--- a/google-colab-demo-pytorch.ipynb
+++ b/google-colab-demo-pytorch.ipynb
@@ -80,18 +80,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if we are on google colab we run this to get data\n",
+    "# We are on google colab, we use gdrive\n",
     "!cp /content/gdrive/My\\ Drive/eurosat.tar.gz ."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# else we run this\n",
-    "!gsutil -m cp -r gs://fchouteau-storage/eurosat.tar.gz ."
    ]
   },
   {
@@ -158,7 +148,7 @@
     "BATCH_SIZE = 64\n",
     "LEARNING_RATE = 0.01\n",
     "MOMENTUM = 0.9\n",
-    "MAX_EPOCHS = 5"
+    "MAX_EPOCHS = 2"
    ]
   },
   {
@@ -530,6 +520,23 @@
     "plt.title('Extension of Precision-Recall curve to multi-class')\n",
     "plt.legend(lines, labels, loc=(0, -1.0), prop=dict(size=14))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save model locally using colab features\n",
+    "try:\n",
+    "    from google.colab import files\n",
+    "\n",
+    "    torch.save(model.state_dict(), \"./model.pt\")\n",
+    "    files.download('./model.pt')\n",
+    "\n",
+    "except ImportError:\n",
+    "    pass"
    ]
   }
  ],
