Update notebooks with some data viz

--- a/google-colab-demo-pytorch.ipynb
+++ b/google-colab-demo-pytorch.ipynb
@@ -18,7 +18,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-06-18T12:40:19.448Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Houston we have GPU\n",
@@ -31,8 +35,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-16T19:38:19.646346Z",
-     "start_time": "2019-06-16T19:38:19.109520Z"
+     "start_time": "2019-06-18T12:40:19.763Z"
     }
    },
    "outputs": [],
@@ -44,7 +47,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-06-18T12:40:20.090Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# installation of custom dependencies\n",
@@ -61,7 +68,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-18T12:37:34.329361Z",
+     "start_time": "2019-06-18T12:37:34.322381Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# We use the mount as storage option but there are many\n",
@@ -77,7 +89,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-06-18T12:40:22.231Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# We are on google colab, we use gdrive\n",
@@ -87,7 +103,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-18T12:40:53.536844Z",
+     "start_time": "2019-06-18T12:40:41.796673Z"
+    }
+   },
    "outputs": [],
    "source": [
     "!tar -zxf eurosat.tar.gz"
@@ -96,7 +117,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-18T12:40:53.790045Z",
+     "start_time": "2019-06-18T12:40:53.542030Z"
+    }
+   },
    "outputs": [],
    "source": [
     "!ls eurosat/\n",
@@ -106,7 +132,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-18T12:40:55.564160Z",
+     "start_time": "2019-06-18T12:40:53.793445Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# various imports\n",
@@ -141,7 +172,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-18T12:41:03.437103Z",
+     "start_time": "2019-06-18T12:41:03.434578Z"
+    }
+   },
    "outputs": [],
    "source": [
     "random.seed(2019)\n",
@@ -164,6 +200,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-18T12:41:04.640573Z",
+     "start_time": "2019-06-18T12:41:04.624995Z"
+    },
     "lines_to_next_cell": 2
    },
    "outputs": [],
@@ -222,10 +262,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-16T18:36:39.266708Z",
-     "start_time": "2019-06-16T18:36:39.118817Z"
-    },
-    "lines_to_next_cell": 2
+     "end_time": "2019-06-18T12:41:05.165695Z",
+     "start_time": "2019-06-18T12:41:05.154143Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -255,6 +294,36 @@
     "    val_loader = DataLoader(dataset=val_dataset, shuffle=False, batch_size=BATCH_SIZE)\n",
     "\n",
     "    return train_loader, val_loader"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Look at some data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-18T12:42:09.389768Z",
+     "start_time": "2019-06-18T12:42:08.722301Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# plot some data\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "train_dataset = EurosatDataset.from_fold(data_dir=\"./eurosat\", fold=\"train\")\n",
+    "for i in range(5):\n",
+    "    x, y = train_dataset[i]\n",
+    "    plt.figure()\n",
+    "    plt.imshow(x)\n",
+    "    print(train_dataset.classes[y])\n",
+    "    plt.show()"
    ]
   },
   {
